--- a/EmoBot/MainPage.xaml
+++ b/EmoBot/MainPage.xaml
@@ -5,10 +5,15 @@
     xmlns:local="using:EmoBot"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d" Unloaded="Page_Unloaded">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Button x:Name="EmotivBridgeTestButton" Content="Test EmotivBridge" HorizontalAlignment="Left" Margin="109,141,0,0" VerticalAlignment="Top" Click="EmotivBridgeTestButton_Click"/>
-
+        
+        <Button x:Name="ConnectButton" Content="Connect" HorizontalAlignment="Center" Margin="0,183,0,0" VerticalAlignment="Top" Click="ConnectButton_Click"/>
+        <Button x:Name="DisconnectButton" Content="Disconnect" HorizontalAlignment="Center" Margin="0,242,0,0" VerticalAlignment="Top" Click="DisconnectButton_Click"/>
+        
+        <Button x:Name="AngryButton" Content="Angry" HorizontalAlignment="Center" Margin="0,301,0,0" VerticalAlignment="Top" Click="AngryButton_Click"/>
+        <Button x:Name="HappyButton" Content="Happy" HorizontalAlignment="Center" Margin="0,360,0,0" VerticalAlignment="Top" Click="HappyButton_Click"/>
     </Grid>
 </Page>
